# eink-solution

./: .rustfmt.toml  Cargo.toml  Makefile.toml  README.md  rustfmt.toml
crates/eink-always-on-top/: Cargo.toml  README.md
crates/eink-always-on-top/examples/: example_always_on_top.rs
crates/eink-always-on-top/src/: always_on_top.rs  lib.rs  window_border.rs
crates/eink-appbar/: Cargo.toml  README.md
crates/eink-appbar/examples/: hide_appbar.rs  show_appbar.rs
crates/eink-appbar/src/: lib.rs
crates/eink-capturer/: Cargo.toml
crates/eink-capturer/src/: capture.rs  cli.rs  d3d.rs  main.rs  window_info.rs
crates/eink-cli/: Cargo.toml  README.md
crates/eink-cli/src/: main.rs
crates/eink-common/: Cargo.toml  README.md
crates/eink-common/src/: lib.rs
crates/eink-composer/: .gitignore  Cargo.toml  README.md  app.manifest.rc  build.rs  rustfmt.toml
crates/eink-composer-lib/: Cargo.toml
crates/eink-composer-lib/src/: ipc.rs  lib.rs
crates/eink-composer/examples/: black-screen.rs  dxgi-hdr.rs  ipc.rs  mon_dup.rs
crates/eink-composer/src/: client.rs  d3d.rs  d3dcompiler.rs  drawing_context.rs  duplicator.rs  eink.rs  frame_counter.rs  iterable.rs  layer copy.rs  layer.rs  layer2.rs  main.rs  main2.rs  main3.rs  renderer.rs  specialized.rs  surface_composer.rs  surface_flinger.rs  swap_chain.rs  utility.rs  winrt.rs  winrt_ext.rs
crates/eink-composer/src/d3d11/: d3d11.rs  mod.rs  resource.rs
crates/eink-composer/src/dxgi/: dxgi.rs  format.rs  mod.rs
crates/eink-composer/src/shader/: mod.rs  shader.hlsl
crates/eink-core/: Cargo.toml  README.md
crates/eink-core/src/: lib.rs
crates/eink-core/src/applist/: mod.rs
crates/eink-desktop/: Cargo.toml
crates/eink-desktop/src/: main.rs
crates/eink-eventbus/: Cargo.toml
crates/eink-eventbus/src/: event.rs  event_listener.rs  impl_sync.rs  lib.rs  topic.rs  topic_key.rs
crates/eink-iddcx/: Cargo.toml
crates/eink-iddcx/examples/: test-iddcx.rs
crates/eink-iddcx/src/: lib.rs
crates/eink-itetcon/: Cargo.toml  README.md  build.rs
crates/eink-itetcon/examples/: itetcon_set_cover.rs  itetcon_set_cover2.rs
crates/eink-itetcon/src/: IT8951_USB_API.h  itetcon.hpp  itetcon.rs  itetcon_device.rs  lib.rs
crates/eink-keyboard-manager/: README.md
crates/eink-logger/: Cargo.toml  README.md
crates/eink-logger/examples/: test-log.rs
crates/eink-logger/src/: lib.rs
crates/eink-pipe-io/: Cargo.toml
crates/eink-pipe-io/examples/: pipe-io-blocking-client.rs  pipe-io-client-raw.rs  pipe-io-client.rs  pipe-io-server-raw.rs  pipe-io-server.rs
crates/eink-pipe-io/src/: blocking.rs  client.rs  lib.rs  msg.rs  server.rs
crates/eink-service/: Cargo.toml  README.md  app.manifest  app.manifest.rc  build.rs
crates/eink-service copy/: README.md  app.manifest
crates/eink-service copy/examples/: test-process.rs
crates/eink-service copy/src/: composer.rs  eink_service.rs  eink_ton.rs  global.rs  helper.rs  hotkey.rs  ipc_service.rs  magnify.rs  main.rs  registry_service.rs  topmost_manager.rs  window_manager_service.rs
crates/eink-service-api/: Cargo.toml  bindings.h  build.rs
crates/eink-service-api/src/: keyboard_api.rs  lib.rs  lib.toml  tcon_api.rs  topmost_api.rs  wmi_api.rs
crates/eink-service-common/: Cargo.toml
crates/eink-service-common/src/: lib.rs
crates/eink-service-helper/: Cargo.toml  README.md  app.manifest.rc  build.rs  default-service-helper-settings.json
crates/eink-service-helper/examples/: dpi-test.rs  reg-test.rs  restyle-magnify.rs  weakself.rs  wmi-test.rs
crates/eink-service-helper/src/: always_on_top.rs  dpi_aware.rs  helper.rs  hotkey.rs  immersion.rs  ls_note_starter.rs  mag_win.rs  magnify.rs  main copy.rs  main.rs  mode_manager.rs  monitor.rs  settings.rs  specialized.rs  taskbar.rs  tcon_api.rs  topmost.rs  utils.rs  win_utils.rs  wmi_service.rs
crates/eink-service-helper/src/window/: mod.rs  window_all.rs  window_capturable.rs  window_info.rs  window_overlapping.rs  window_watcher.rs
crates/eink-service-runner/: Cargo.toml  README.md
crates/eink-service-runner/src/: main.rs
crates/eink-service/examples/: hid-test.rs  wmi-test.rs
crates/eink-service/src/: capturer.rs  composer.rs  config.rs  config_service.rs  disp_filter.rs  eink.rs  eink_desktop.rs  eink_service.rs  eink_ton.rs  global.rs  helper.rs  iddcx.rs  ipc.rs  iteton_service.rs  keyboard_manager.rs  main.rs  main.rs2  reg.rs  registry_service.rs  service_helper.rs  service_main.rs  settings.rs  tcon_service.rs  topmost_manager.rs  utils.rs  virtual_desktop.rs  virtual_monitor.rs  vmon.rs  win_utils.rs  winrt.rs  wmi.rs
crates/eink-taskbar-manager/: Cargo.toml  READNE.md
crates/eink-taskbar-manager/src/: main.rs
crates/eink-vdesktop/: Cargo.toml
crates/eink-vdesktop/src/: main.rs
crates/eink-watchreg/: Cargo.toml
crates/eink-watchreg/src/: lib.rs
crates/eink-winkits/: Cargo.toml  README.md
crates/eink-winkits/src/: lib.rs  process.rs  process_waiter.rs  taskbar.rs
src/: eink.rs  global.rs  logger.rs  main.rs  vmon.rs
