[workspace]
members = [
    # Windows 日志库，支持环境变量配置，OutputDebugString 输出
    "crates/eink-logger",

    "crates/eink-eventbus",
    # "crates/eink-watchreg",

    "crates/eink-service",
    "crates/eink-service-runner",

    "crates/eink-composer-lib",
    "crates/eink-composer",

    "crates/eink-capturer",
    "crates/eink-desktop",
]
