[workspace]
members = [
    # Windows 日志库，支持环境变量配置，OutputDebugString 输出
    "crates/eink-logger",

    # 事件总线
    "crates/eink-eventbus",

    # 管道通讯库
    "crates/eink-pipe-io",

    # IddCx 驱动程序互操作库
    "crates/eink-iddcx",

    # 公共库
    "crates/eink-common",

    # 服务
    # TODO：使用 runner 把 service 改为标准应用程序
    "crates/eink-service",
    "crates/eink-service-helper",
    "crates/eink-service-runner",

    # 合成器 Composer 
    "crates/eink-composer-lib",
    "crates/eink-composer",

    # 捕获器
    "crates/eink-capturer",

    # AppBar 控制库
    "crates/eink-appbar",

    "crates/eink-itetcon",

    # "crates/eink-desktop",
    # "crates/eink-vdesktop",
]
