[package]
name = "eink-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = { version = "0.4", features = ["kv_unstable"] }
structopt = "0.3.26"
windows-dll = "0.4.1"

serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

eink-pipe-io = { path = "../eink-pipe-io" }


[dependencies.windows]
version = "0.42.0"
features = [
    "Foundation",
    "Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
    "Graphics_DirectX",
    "Graphics_Imaging",
    "Graphics",
    "Storage_Streams",
    "Storage",
    "UI",
    "Win32_Foundation",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_StationsAndDesktops",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_WinRT",
    "Win32_UI_HiDpi",
    "Win32_UI_Magnification",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]
