[package]
name = "eink-iddcx"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
widestring = "1.0"


[dependencies.windows]
version = "0.42"
features = [
    "interface",
    "implement",
    "Foundation",
    "Foundation_Numerics",
    "Foundation_Collections",
    "Win32_Foundation",
    "Win32_Devices_Display",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Enumeration_Pnp",
    "Win32_Devices_Properties",
    "Win32_System",
    "Win32_System_Com",
    "Win32_System_Services",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Display",
    "Win32_Security",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D_Dxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct2D",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_System_SystemServices",
    "Win32_Storage_FileSystem",
    "Win32_Devices_HumanInterfaceDevice",
    "Storage",
    "Devices_Enumeration",
    "Devices_Display_Core",
    "Devices_HumanInterfaceDevice",
    "Graphics",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
]
