[package]
name = "eink-itetcon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4.17"
clap = { version = "4.0.4", features = ["derive"] }
widestring = "1.0.2"
windows-dll = "0.4.1"

[dependencies.windows]
version = "0.42.0"
features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_StationsAndDesktops",
    "Win32_System_SystemServices",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "UI",
    "Storage",
    "Storage_Streams",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Imaging",
]


[build-dependencies]
anyhow = "1.0"
glob = "0.3"
fs_extra = "1.2.0"
