[package]
name = "eink-logger"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
dirs = { version = "4.0.0" }
flexi_logger = "0.24.1"
debug-view-logger = { git = "http://git2.ensurebit.net/lenovo-thinkbook-gen4/debug-view-logger.git" }


[dependencies.windows]
version = "0.43.0"
features = ["Win32_System_Diagnostics_Debug"]
