[package]
name = "eink-logger"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
dirs = { version = "4.0.0" }
fast_log = "1.5.36"
fastdate = "0.1.27"
log = "0.4.17"
regex = "1.6.0"
widestring = "1.0.2"

[dependencies.windows]
version = "0.43.0"
features = ["Win32_System_Diagnostics_Debug"]
