[package]
name = "eink-pipe-io"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
log = { version = "0.4", features = ["std", "serde"] }
pipe-ipc = { path = "../../../pipe-ipc/crates/pipe-ipc" }
uuid = "1.1.2"
parking_lot = "0.12.1"

signals2 = "*"

tokio = { version = "1.21.2", features = ["full"] }

# Remote multiplexed objects and channels
# Apache 2 license
remoc = { version = "0.10.0" }

serde = { version = "1.0.145" }
serde_json = { version = "1.0.85" }
jsonrpc-lite = { version = "0.6.0" }


[dependencies.windows]
version = "0.42"
features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security_Authorization",
    "Win32_Security",
    "Win32_System_Memory",
]
