[package]
name = "eink-service-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
log = { version = "0.4", features = ["kv_unstable"] }
static_init = "1.0"
widestring = "1.0.2"

# 快速同步设施, MIT or Apcahe-2.0
parking_lot = "0.12"

serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

eink-pipe-io = { path = "../eink-pipe-io" }
eink-logger = { path = "../eink-logger" }

[dependencies.windows]
version = "0.42"
features = ["Foundation", "Win32_Foundation", "Win32_System_SystemServices"]

[build-dependencies]
cbindgen = "0.24.3"
