[package]
name = "eink-service-helper"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4.17"
structopt = "0.3.26"
clap = { version = "4.0.4", features = ["derive"] }
widestring = "1.0.2"
jsonrpc-lite = "0.6.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
windows-hotkeys = "0.1.1"
static_init = "1.0.3"
cmd_lib = "1.3.0"
wineventhook = "0.5.0"

# 快速同步设施, MIT or Apcahe-2.0
parking_lot = "0.12"

# 标准目录 Windows Known Folder, MIT
dirs = "4.0"

# 配置文件读写, MIT/Apache-2.0
config = "0.13"

libc = "0.2.134"
cmd_lib_cf = "1.3.4"

# NTAPI
ntapi = "0.4.0"

winsafe = "0.0.11"

# 部分使用了 tokio 异步运行时
futures = "0.3"
tokio = { version = "1.21", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }


# eink stuff
eink-logger = { path = "../eink-logger" }
eink-common = { path = "../eink-common" }
eink-pipe-io = { path = "../eink-pipe-io" }
eink-winkits = { path = "../eink-winkits" }
eink-service-api = { path = "../eink-service-api" }

[dependencies.windows]
version = "0.42.0"
features = [
    "Foundation",
    "Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
    "Graphics_DirectX",
    "Graphics_Imaging",
    "Graphics",
    "Storage_Streams",
    "Storage",
    "UI",
    "Win32_Foundation",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_StationsAndDesktops",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_WinRT",
    "Win32_UI_HiDpi",
    "Win32_UI_Magnification",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]


[build-dependencies]
embed-resource = "1.7"
