[package]
name = "eink-service-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3.1.3"
flexi_logger = "0.23.3"
log = "0.4.8"
structopt = "0.3.2"
winapi = { version = "0.3.8", features = ["wincon", "winerror"] }
windows-service = "0.5.0"

[dev-dependencies]
regex = "1.3.1"
speculate = "0.1.2"

[build-dependencies]
winres = "0.1"
