[package]
name = "eink-watchreg"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.10.1"
uuid = "1.1.2"


[dependencies.windows]
version = "0.42.0"
features = [
    "interface",
    "implement",
    "Foundation",
    "Foundation_Numerics",
    "Foundation_Collections",
    "Win32_Foundation",
    "Win32_Devices_Display",
    "Win32_System",
    "Win32_System_Services",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Display",
    "Win32_Security",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D_Dxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct2D",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Devices_Display_Core",
    "Graphics",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
]
